others/simple-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: simple
  name: simple-deployment
  namespace: default
spec:
  ports:
  - nodePort: 30247
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: simple
  type: NodePort
