others/ingress-simple.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.dotzexemplo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-deployment
          servicePort: 80
      - path: /hello
        backend:
          serviceName: simple-deployment
          servicePort: 80
